# PBDEngine

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: common.hpp
core/: CMakeLists.txt
core/include/: constraints.hpp  particle_system.hpp  physics.hpp  self_collision.hpp
core/src/: constraints.cpp  particle_system.cpp  physics.cpp  self_collision.cpp
graphics/: CMakeLists.txt
graphics/include/: UI.hpp  render.hpp
graphics/src/: UI.cpp  render.cpp
interaction/: CMakeLists.txt
interaction/include/: interaction.hpp
interaction/src/: interaction.cpp
